# Study-Helper-Telegram

./: .env.dist  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  run.py
.github/workflows/: main.yml
app/: database.py
app/core/: config.py
app/crud/: hometask.py  lesson.py  user.py
app/dialogs/: __init__.py
app/dialogs/hometask/: __init__.py  callbacks.py  getters.py  keyboards.py  states.py  windows.py
app/dialogs/start/: callbacks.py  states.py  windows.py
app/handlers/start/: start.py
bot/: .dockerignore  .gitignore  Dockerfile  requirements.txt
bot/app/: __main__.py  database.py
bot/app/apsched/: hometask.py  schedule.py  weather.py
bot/app/core/: config.py
bot/app/crud/: hometask.py  lesson.py  material.py  schedule.py  user.py  weather.py
bot/app/dialogs/: __init__.py
bot/app/dialogs/hometask/: __init__.py  callbacks.py  getters.py  keyboards.py  states.py  utils.py  windows.py
bot/app/dialogs/schedule/: __init__.py  callbacks.py  getters.py  keyboards.py  states.py  windows.py
bot/app/dialogs/settings/: __init__.py  callbacks.py  getters.py  states.py  utils.py  windows.py
bot/app/dialogs/start/: __init__.py  callbacks.py  getters.py  windows.py
bot/app/handlers/start/: start.py
bot/app/migrations/: migrations.py
bot/app/mstimetables/: api.py  service.py  utils.py
bot/app/openmeteo/: api.py  service.py
