[tool.poetry]
name = "study-helper-telegram"
version = "0.1.0"
description = ""
authors = ["fadegor05 <fad.egor05@gmail.com>"]
readme = "README.md"
packages = [{include = "study_helper_telegram"}]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
aiogram-dialog = "^2.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
